--- a/src/index.html
+++ b/src/index.html
@@ -28,11 +28,38 @@
       <div class="input-group-prepend">
         <button class="btn btn-light dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select User</button>
         <div class="dropdown-menu">
-          <a class="dropdown-item">Xavier <input type="checkbox" checked="" class="xavier-radio"></a>
-          <a class="dropdown-item">Joanna <input type="checkbox" class="joanna-radio"></a>
-          <a class="dropdown-item">Gunter <input type="checkbox" class="gunter-radio"></a>
-          <a class="dropdown-item">Sven <input type="checkbox" class="sven-radio"></a>
-          <a class="dropdown-item">Mackenzie <input type="checkbox" class="mackenzie-radio"></a>
+          <a class="dropdown-item">
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="xavier">
+              <label class="form-check-label" for="exampleRadios1">
+                Xavier
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="joanna">
+              <label class="form-check-label" for="exampleRadios2">
+                Joanna
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="gunter">
+              <label class="form-check-label" for="exampleRadios3">
+                Gunter
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios4" value="sven">
+              <label class="form-check-label" for="exampleRadios4">
+                Sven
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios5" value="mackenzie">
+              <label class="form-check-label" for="exampleRadios5">
+                Mackenzie
+              </label>
+            </div>
+          </a>
         </div>
       </div>
       <textarea class="form-control" aria-label="With textarea"></textarea>
