--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,23 @@
   </button>
   <div id="accordion">
   <ul class="navbar-nav mr-auto">
-    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-      Chat!
-    </button>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <li class="nav-item">
+      <button class="btn btn-success" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        Chat!
+      </button>
+    </li>
+    <li class="nav-item dropdown">
+      
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Options
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      
+    </li>
   </ul>
 </nav>
 <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
