--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-md navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <a class="navbar-brand" href="#">Textual Feeling</a>
   <div id="accordion">
   <ul class="navbar-nav mr-auto">
     <li class="nav-item">
@@ -20,16 +17,14 @@
       </button>
     </li>
     <li class="nav-item dropdown">
-      
         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Options
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="#"><button type="button" class="btn btn-info">Large Text</button></a>
+          <a class="dropdown-item" href="#"><button type="button" class="btn btn-dark">Dark Mode</button></a>
+          <a class="dropdown-item" href="#"><button type="button" class="btn btn-danger">Clear Chat</button></a>
         </div>
-      
     </li>
   </ul>
 </nav>
