button sizes/positions

--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,17 @@
   <title>Test</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-md navbar-light bg-light">
+  <nav class="navbar navbar-expand-md navbar-light bg-light justify-content-between">
   <a class="navbar-brand" href="#">Textual Feeling</a>
   <div id="accordion">
-  <ul class="navbar-nav mr-auto">
+  <ul class="navbar-nav mr-auto ml-4 mr-4">
     <li class="nav-item">
-      <button class="btn btn-success" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+      <button class="btn btn-success btn-lg" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
         Chat!
       </button>
     </li>
-    <li class="nav-item dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <li class="nav-item dropdown ml-4 mr-4">
+        <button class="btn btn-secondary dropdown-toggle btn-lg" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Options
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
