when I get that feeling I want ... Textual Healing

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-md navbar-light bg-light justify-content-between">
-  <a class="navbar-brand" href="#">Textual Feeling</a>
+  <a class="navbar-brand" href="#">Textual Healing</a>
   <div id="accordion">
   <ul class="navbar-nav mr-auto ml-4 mr-4">
     <li class="nav-item">
@@ -21,9 +21,9 @@
           Options
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#"><button type="button" class="btn btn-info">Large Text</button></a>
+          <a class="dropdown-item" href="#"><button type="button" class="btn btn-info"> Large Text </button></a>
           <a class="dropdown-item" href="#"><button type="button" class="btn btn-dark">Dark Mode</button></a>
-          <a class="dropdown-item" href="#"><button type="button" class="btn btn-danger">Clear Chat</button></a>
+          <a class="dropdown-item" href="#"><button type="button" class="btn btn-danger"> Clear Chat </button></a>
         </div>
     </li>
   </ul>
