--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
           Options
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#"><button type="button" class="btn btn-info"> Large Text </button></a>
-          <a class="dropdown-item" href="#"><button type="button" class="btn btn-dark">Dark Mode</button></a>
-          <a class="dropdown-item" href="#"><button type="button" class="btn btn-danger"> Clear Chat </button></a>
+          <a class="dropdown-item" href="#"><button type="button" id="large-text" class="btn btn-info"> Large Text </button></a>
+          <a class="dropdown-item" href="#"><button type="button" id="dark-mode" class="btn btn-dark">Dark Mode</button></a>
+          <a class="dropdown-item" href="#"><button type="button" id="clear-chat" class="btn btn-danger"> Clear Chat </button></a>
         </div>
     </li>
   </ul>
@@ -68,7 +68,7 @@
           </a>
         </div>
       </div>
-      <textarea class="form-control" aria-label="With textarea"></textarea>
+      <textarea class="form-control" id="message-contet" aria-label="With textarea"></textarea>
       <div class="input-group-append">
         <input class="btn btn-primary" type="submit" value="Submit">
       </div>
