--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     <div class="input-group">
       <div class="input-group-prepend">
         <button class="btn btn-light dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select User</button>
-        <div class="dropdown-menu">
+        <div class="dropdown-menu user-menu">
           <a class="dropdown-item">
             <div class="form-check">
               <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="xavier">
